# rust_in_action

./: Cargo.toml  README.md
src/: renderhex.rs  simple.rs
