[package]
name = "channels"
version = "0.1.0"
authors = ["Tim McNamara <paperless@timmcnamara.co.nz>", "Vest <Vest@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple"
path = "src/simple.rs"
test = false
bench = false

[[bin]]
name = "complex"
path = "src/complex.rs"
test = false
bench = false

[[bin]]
name = "renderhex"
path = "src/renderhex.rs"
test = false
bench = false

[dependencies]
crossbeam = "0.8.0"
svg = "0.9.1"
